--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">Team Builder</string>
     <string name="action_settings">Settings</string>
-
+    <string name="open_drawer">Open drawer</string>
+    <string name="close_drawer">Close Drawer</string>
 </resources>
